--- a/landingpagecss.css
+++ b/landingpagecss.css
@@ -16,10 +16,40 @@ li {
     list-style: none;
 }
 
+/*form {
+    
+    display: inline-flex;
+    margin: 200 auto;
+    
+    justify-content: normal;
+}*/
+
+h1 {
+    text-align: center;
+    display: inline-flex;
+}
 .container {
+    display: flex;
     max-width: 1000px;
     width: 100%;
-    marging: 0 auto;
+    margin: 0 auto;
+    align-items: center;
+    justify-content: normal;
+}
+
+#keylist {
+    padding: 0;
+    margin: 0;
+
+}
+
+.fieldtest {
+    display: flex;
+    max-width: 1000px;
+    width: 100%;
+    margin: 0 auto;
+    align-items: center;
+    justify-content: normal;
 }
 
 .btn {
